--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "alaska-goods",
   "version": "0.1.0",
   "description": "Alaska goods service",
-  "main": "index.js",
+  "main": "lib/alaska-goods.js",
   "scripts": {
     "build": "babel ./src --out-dir ./lib",
     "watch": "babel ./src --out-dir ./lib -w",
@@ -30,9 +30,18 @@
     "babel-plugin-syntax-async-functions": "^6.5.0",
     "babel-plugin-syntax-class-properties": "^6.5.0",
     "babel-plugin-transform-class-properties": "^6.6.0",
-    "babel-plugin-transform-es2015-destructuring": "^6.6.5",
-    "babel-plugin-transform-es2015-parameters": "^6.6.5",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
+    "babel-plugin-syntax-export-extensions": "^6.3.13",
+    "babel-plugin-transform-export-extensions": "^6.4.0",
+    "babel-plugin-transform-runtime": "^6.5.2",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "rimraf": "^2.5.2"
+  },
+  "dependencies": {
+    "alaska-balance": "^0.1.0",
+    "alaska-field-html": "^0.1.0",
+    "alaska-field-select": "^0.2.0"
   }
 }
