--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alaska-goods",
-  "version": "0.8.7",
+  "version": "0.8.8",
   "description": "Alaska goods service",
   "main": "lib/alaska-goods.js",
   "scripts": {
@@ -24,8 +24,9 @@
   },
   "homepage": "https://github.com/maichong/alaska-goods#readme",
   "dependencies": {
-    "alaska-balance": "^0.8.1",
-    "alaska-field-html": "^0.8.0",
-    "alaska-field-select": "^0.8.0"
+    "alaska-balance": "^0.8.2",
+    "alaska-field-html": "^0.8.1",
+    "alaska-field-select": "^0.8.1",
+    "alaska-field-mixed": "^0.8.1"
   }
 }
