--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alaska-goods",
-  "version": "0.10.6",
+  "version": "0.10.7",
   "description": "Alaska goods service",
   "keywords": [
     "alaska",
@@ -30,7 +30,8 @@
   "dependencies": {
     "alaska-balance": "^0.10.1",
     "alaska-field-html": "^0.10.1",
-    "alaska-field-select": "^0.10.2",
+    "alaska-field-select": "^0.10.3",
+    "alaska-field-category": "^0.10.0",
     "alaska-field-mixed": "^0.10.1"
   }
 }
